redis implement and logout